setting background image and background pattern

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,12 @@ html {
     font-family: 'Red Hat Display', sans-serif;
 }
 
+body {
+    background-color: var(--pale-blue);
+    background-image: url(../images/pattern-background-mobile.svg);
+    background-repeat: no-repeat;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
