--- a/css/styles.css
+++ b/css/styles.css
@@ -9,19 +9,50 @@
 
 html {
     font-size: 16px;
-    font-family: 'Red Hat Display', sans-serif;
+    font-family: "Red Hat Display", sans-serif;
 }
 
 body {
     background-color: var(--pale-blue);
     background-image: url(../images/pattern-background-mobile.svg);
     background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    position: relative;
 }
 
 .attribution {
-  font-size: 11px;
-  text-align: center;
+    font-size: 11px;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 12px;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+    color: hsl(228, 45%, 44%);
+}
+
+.container {
+    position: relative;
+    /* display: flex; */
+    /* flex-direction: column; */
+    text-align: center;
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* margin-right: auto;
+    margin-left: auto; */
+    margin: auto;
+    width: 85%;
+    height: 600px;
+    background-color: var(--very-pale-blue);
+    border-radius: 30px 30px 30px 30px;
+    overflow: hidden;
+}
+
+.heading-image img{
+    width: 100%;
 }
