--- a/css/styles.css
+++ b/css/styles.css
@@ -20,16 +20,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    
-    position: relative;
 }
 
 .attribution {
-    font-size: 11px;
-    text-align: center;
     position: absolute;
     bottom: 0;
+
+    font-size: 11px;
+    text-align: center;
     margin-bottom: 12px;
 }
 .attribution a {
@@ -37,14 +35,7 @@ body {
 }
 
 .container {
-    position: relative;
-    /* display: flex; */
-    /* flex-direction: column; */
     text-align: center;
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* margin-right: auto;
-    margin-left: auto; */
     margin: auto;
     width: 85%;
     height: 600px;
@@ -53,6 +44,13 @@ body {
     overflow: hidden;
 }
 
-.heading-image img{
+.heading-image-container {
+    height: 27%;
+}
+
+.heading-image{
+    height: 100%;
     width: 100%;
+    object-fit: cover;
+    object-position: center;
 }
