--- a/css/styles.css
+++ b/css/styles.css
@@ -43,10 +43,11 @@ body {
     background-color: var(--very-pale-blue);
     border-radius: 30px 30px 30px 30px;
     overflow: hidden;
+    box-shadow: 1px 20px 50px -40px var(--desaturated-blue) ;
 }
 
 .heading-image-container {
-    height: 27%;
+    height: 30%;
     margin-bottom: 30px;
 }
 
