center img item

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,12 @@ body {
     margin-bottom: 30px;
 }
 
+.item-img-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .item-description {
     line-height: 0.4;
     font-size: 0.8rem;
