--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body {
 .container {
     text-align: center;
     margin: auto;
-    width: 85%;
+    width: 330px;
     height: 80%;
     background-color: var(--very-pale-blue);
     border-radius: 30px 30px 30px 30px;
