--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ body {
     text-align: center;
     margin: auto;
     width: 330px;
-    height: 80%;
+    height: 500px;
     background-color: var(--very-pale-blue);
     border-radius: 15px 15px 15px 15px;
     overflow: hidden;
@@ -47,22 +47,23 @@ body {
 }
 
 .heading-image-container {
-    height: 30%;
-    margin-bottom: 30px;
+    transition: 0.5s;
+    height: 15%;
+    margin-bottom: 40px;
 }
 
 .heading-image{
-    height: 100%;
     width: 100%;
+    height: 100%;
     object-fit: cover;
-    object-position: center;
+    overflow: hidden;
 }
 
 .summary-info {
     line-height: 1.8;
     max-width: var(--inner-container-size);
     margin: auto;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
     width: 250px;
 }
 
@@ -82,7 +83,7 @@ body {
     justify-content: space-between;
     align-items: center;
     margin: auto;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
 }
 
 .item-img-container{
@@ -158,4 +159,27 @@ body {
         font-size: 0.8rem;
     }
 
+}
+
+@media ( min-height: 625px) {
+    .container {
+        height: 530px;
+    }
+    .heading-image-container {
+        height: 30%;
+        margin-top: 0;
+        margin-bottom: 30px;
+    }
+
+    .item-container,
+    .summary-info {
+        margin-bottom: 15px;
+    }
+    .heading-image{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 0%;
+    }
 }
